Remaking PhieuNhapXuat_1/3_1am

--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -51,6 +51,14 @@
                         <i class="fas fa-plus"></i>
                         Thêm chi tiết kho
                     </a>
+                    <a class="btn btn-add btn-sm" href="/PhongKho/CreatePNX/@TempData["makho"]" title="Thêm" style="margin-left:20px;">
+                        <i class="fas fa-plus"></i>
+                        Tạo phiếu nhập
+                    </a>
+                    <a class="btn btn-add btn-sm" href="/PhongKho/CreatePNX/@TempData["makho"]" title="Thêm" style="margin-left:20px;">
+                        <i class="fas fa-plus"></i>
+                        Tạo phiếu xuất
+                    </a>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
@@ -58,7 +66,7 @@
                         <thead>
                             <tr>
                                 <th>
-                                    Mã chi tiết kho
+                                    STT
                                 </th>
                                 <th>
                                     Mã sản phẩm
@@ -88,7 +96,7 @@
                             {
                                 <tr>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.MaCTKho)
+                                        @Html.DisplayFor(modelItem => item.STT)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.MaSP)
@@ -110,10 +118,10 @@
                                     </td>
 
                                     <td>
-                                        <a href="/PhongKho/EditCTKho//@item.MaCTKho" class="btn btn-primary btn-sm edit" title="Chỉnh sửa">
+                                        <a href="/PhongKho/EditCTKho/@item.STT" class="btn btn-primary btn-sm edit" title="Chỉnh sửa">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <a href="/PhongKho/DeleteCTKho//@item.MaCTKho" class="btn btn-primary btn-sm trash" title="Xóa kho">
+                                        <a href="/PhongKho/DeleteCTKho/@item.STT" class="btn btn-primary btn-sm trash" title="Xóa kho">
                                             <i class="fas fa-trash-alt"></i>
                                         </a>
                                     </td>
