--- a/Test02/Views/PhongKho/DeleteCTKho.cshtml
+++ b/Test02/Views/PhongKho/DeleteCTKho.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-<h3>Bạn muốn xóa chi tiết kho @Model.MaCTKho của kho @Model.MaKho?</h3>
+<h3>Bạn muốn xóa chi tiết kho @Model.STT của kho @Model.MaKho?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
