--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -70,7 +70,7 @@
                                 Địa chỉ
                             </th>
                             <th>
-                                Số lượng
+                                Số chi tiết kho
                             </th>
                             <th>
                                 Chức năng
@@ -91,7 +91,7 @@
                                     @Html.DisplayFor(modelItem => item.DiaChi)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ChiTietKhoes.Count) sản phẩm
+                                    @Html.DisplayFor(modelItem => item.ChiTietKhoes.Count)
                                 </td>
                                 <td>
                                     <a href="~/PhongKho/ChinhSuaKho/@item.MaKho" class="btn btn-outline-primary btn-sm" title="Chỉnh sửa"><i class="fa fa-edit"></i></a>
