--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -47,15 +47,15 @@
             <h3>Danh sách chi tiết của kho @TempData["makho"]</h3>
             <div class="tile-body">
                 <div class="row element-button">
-                    <a class="btn btn-add btn-sm" href="/PhongKho/CreateCTKho/@TempData["makho"]" title="Thêm" style="margin-left:20px;">
+                    <a class="btn btn-success btn-sm" href="/PhongKho/CreateCTKho/@TempData["makho"]" title="Thêm chi tiết kho" style="margin-left:20px;">
                         <i class="fas fa-plus"></i>
                         Thêm chi tiết kho
                     </a>
-                    <a class="btn btn-add btn-sm" href="/PhongKho/CreatePNX/@TempData["makho"]" title="Thêm" style="margin-left:20px;">
+                    <a class="btn btn-dark btn-sm" href="/PhongKho//@TempData["makho"]" title="Thêm phiếu nhập kho" style="margin-left:20px;">
                         <i class="fas fa-plus"></i>
                         Tạo phiếu nhập
                     </a>
-                    <a class="btn btn-add btn-sm" href="/PhongKho/CreatePNX/@TempData["makho"]" title="Thêm" style="margin-left:20px;">
+                    <a class="btn btn-danger btn-sm" href="/PhongKho/CreatePXuat/@TempData["makho"]" title="Thêm phiếu xuất kho" style="margin-left:20px;">
                         <i class="fas fa-plus"></i>
                         Tạo phiếu xuất
                     </a>
