--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -36,6 +36,7 @@
                 <a class="app-nav__item" href="@Url.Action("Logout","LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
 
             </li>
+            
         </ul>
     </header>
     <!-- Sidebar menu-->
@@ -67,15 +68,15 @@
             <li>
                 <a class="app-menu__item @ViewBag.homekt" href="~/KeToan/TrangChuKeToan">
                     <i class='app-menu__icon bx bx-tachometer'></i>
-                    <span class="app-menu__label">Trang chủ</span>
+                    <span class="app-menu__label">Tổng quan</span>
                 </a>
             </li>
-            @*<li>
-                <a class="app-menu__item @ViewBag.qldonhangkt" href="~/KeToan/QlyDonHangKeToan">
-                    <i class='app-menu__icon bx bx-user-voice'></i>
-                    <span class="app-menu__label">Danh sách đơn hàng</span>
+            <li>
+                <a class="app-menu__item @ViewBag.tb" href="~/KeToan/Thongbao">
+                    <i class='app-menu__icon bx bx-bell'></i>
+                    <span class="app-menu__label">Thông báo</span>
                 </a>
-            </li>*@
+            </li>
             <li>
                 <a class="app-menu__item  @ViewBag.qlhd" href="~/KeToan/QLDonHang">
                     <i class='app-menu__icon bx bx-cart-alt'></i> <span class="app-menu__label">Đơn hàng </span>
