--- a/Test02/Content/Test01/main.css
+++ b/Test02/Content/Test01/main.css
@@ -13901,6 +13901,7 @@ be a descendant of the grid when it is being dragged.
   background: white;
   border-radius: .357rem;
   width: 70px;
+  height: 70px;
   border: 3px solid white;
   margin-bottom: 10px;
 }
