--- a/Test02/Views/KhachHang/DonHangDL.cshtml
+++ b/Test02/Views/KhachHang/DonHangDL.cshtml
@@ -1,79 +1,75 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
-    @using Test02.Models
+@using Test02.Models
 @{
     ViewBag.Title = "DonHangDL";
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
     ViewBag.dhdl = "active";
-    ViewBag.Name = "Đơn hàng";
+    ViewBag.nd = "Trang Đơn Hàng";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
-<h2>Danh sách đơn hàng</h2>
-
-
-<table class="table">
-    <tr>
-        <th>
-            Mã đơn hàng
-        </th>
-        <th>
-            Ngày lập
-        </th>
-        @*<th>
-            Số lượng
-        </th>
-        <th>
-            Giá
-        </th>
-        <th>
-            Chiết khấu
-        </th>*@
-        <th>
-            Trạng thái tiếp nhận
-        </th>
-        <th>
-            Tình trạng thanh toán
-        </th>
-        <th>Chức năng</th>
-    </tr>
-    @{
-        var user = (Test02.Models.DaiLy)HttpContext.Current.Session["userDL"];
-      }
-    @{ var mdl = user.MaDL;}
-    @foreach (var item in Model)
-    {
-        if (item.MaDL == mdl)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MaDH)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NgayLap)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TrangThai)
-                </td>
-                @*<td>
-                    @{var ck = item.DonHang.DaiLy.LoaiDL.ChietKhau * 100;
-                      string str = Convert.ToString(ck);}
-                    @Html.DisplayFor(modelItem => str)%
-
-                </td>*@
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.ThanhTien)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                </td>
-                <td>
-                    @Html.ActionLink("Hủy đơn", "DeleteDH", new { id = item.MaDH }) |
-                    @Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })
-                </td>
-            </tr>
-        }
-            
-    }
-
-</table>
-
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <h3 class="tile-title">DANH SÁCH ĐƠN HÀNG</h3>
+            <div class="tile-body">
+                <table class="table">
+                    <tr>
+                        <th>
+                            Mã đơn hàng
+                        </th>
+                        <th>
+                            Ngày lập
+                        </th>
+                        <th>
+                            Trạng thái tiếp nhận
+                        </th>
+                        <th>
+                            Tình trạng thanh toán
+                        </th>
+                        <th style="text-align: center;">Chức năng</th>
+                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.MaDH)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NgayLap)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TrangThai)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                            </td>
+                            <td style="text-align: center;">
+                                @{
+                                    var checkTTTT = item.TinhTrangThanhToan;
+                                    var checkTTTN = item.TrangThai;
+                                    if (checkTTTT == "Đã thanh toán" || checkTTTN == "Đã xét duyệt")
+                                    {
+                                        <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
+                                            <i class="fa fa-info"></i>
+                                        </a>
+                                        @*@Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })*@
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
+                                            <i class="fa fa-info"></i>
+                                        </a>
+                                        <a class="btn btn-outline-warning" href="/KhachHang/DeleteDH/@item.MaDH">
+                                            <i class="fa fa-close"></i>
+                                        </a>
+                                    }
+                                }
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
