--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Danh sách kho";
     ViewBag.qlk = "active";
+    
 
 }
 
@@ -45,6 +46,7 @@
     }
 }
 
+@* Danh sách kho hàng *@
 <div class="row">
     <div class="col-lg-12">
         <div class="tile">
@@ -106,6 +108,8 @@
         </div>
     </div>
 </div>
+@* /> danh sách kho *@
+
 
 
 <script>
