--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -59,6 +59,7 @@
                                         <tr class="table-warning">
                                             <th>Mã sản phẩm</th>
                                             <th>Tên sản phẩm</th>
+                                            <th>Hình minh họa</th>
                                             <th>Giá</th>
                                             <th>Đơn vị tính</th>
                                             <th>Ngày sản xuất</th>
@@ -69,29 +70,32 @@
                                     <tbody>
                                         @foreach (var item in dssp)
                                         {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.MaSP)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.TenSP)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Gia)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.DonViTinh)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.NgaySX)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.HanSD)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.TongTon)
-                                                </td>
-                                            </tr>
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaSP)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TenSP)
+                                            </td>
+                                            <td>
+                                                <img src="@item.HinhAnh" style="width:80px; height:100px;" />
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Gia)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.DonViTinh)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.NgaySX)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.HanSD)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TongTon)
+                                            </td>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
@@ -179,7 +183,7 @@
                         <div>
                             <h3 class="tile-title" id="sample1" style="text-align:center">DANH SÁCH HÀNG TỒN KHO</h3>
                         </div>
-                        <div class="tile-body">
+                        <div class="tile-body table-responsive">
                             <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                                        id="sampleTable">
                                 <thead>
