--- a/Test02/Views/GiaoHang/BaoCaoLyDoHoanDon.cshtml
+++ b/Test02/Views/GiaoHang/BaoCaoLyDoHoanDon.cshtml
@@ -1,14 +1,13 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "DonHangMoi";
+    ViewBag.Title = "BaoCaoLyDoHoanDon";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_donhangmoi = "active";
-    ViewBag.nd = "Danh sách đơn hàng";
+    ViewBag.gh_bcldh = "active";
+    ViewBag.nd = "Lý do hoàn đơn";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 }
 
-
-<h2>DonHangMoi</h2>
+<h2>BaoCaoLyDoHoanDon</h2>
 
