--- a/Test02/Views/GiaoHang/BaoCaoPhongGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/BaoCaoPhongGiaoHang.cshtml
@@ -1,14 +1,13 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "DonHangMoi";
+    ViewBag.Title = "BaoCaoPhongGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_donhangmoi = "active";
-    ViewBag.nd = "Danh sách đơn hàng";
+    ViewBag.gh_bc = "active";
+    ViewBag.nd = "Báo Cáo";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 }
 
-
-<h2>DonHangMoi</h2>
+<h2>BaoCaoPhongGiaoHang</h2>
 
