--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <!-- Main CSS-->
-    <link rel="stylesheet"  href="~/Content/Test01/main.css">
+    <link rel="stylesheet" href="~/Content/Test01/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!-- Font-icon css-->
-    <link rel="stylesheet" 
+    <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+
 
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
@@ -28,7 +29,7 @@
 
             <!-- User Menu-->
             <li>
-                <a class="app-nav__item" href="@Url.Action("Logout","LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
+                <a class="app-nav__item" href="@Url.Action("Logout", "LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
 
             </li>
         </ul>
@@ -37,12 +38,16 @@
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-            <img class="app-sidebar__user-avatar" src="~/Content/Img/135017829_1026004181228801_2637032699560275_n.jpg" width="50px"
+            <img class="app-sidebar__user-avatar" src="~/Content/Img/neo.jpg" width="50px" height="65px"
                  alt="User Image">
             <div>
-                <p class="app-sidebar__user-name"><b>@{
-                        var user =(Test02.Models.NhanVien) HttpContext.Current.Session["user"];
-                        @user.TenNV}</b></p>
+                <p class="app-sidebar__user-name">
+                    <b>
+                        @{
+                            var user = (Test02.Models.NhanVien)HttpContext.Current.Session["user"];
+                            @user.TenNV}
+                    </b>
+                </p>
                 <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
             </div>
         </div>
@@ -54,26 +59,38 @@
                     <span class="">PHÒNG GIAO HÀNG</span>
                 </a>
             </li>
+            @*<li>
+                <a class="app-menu__item @ViewBag.home" href="~/KinhDoanh/TrangChu">
+                    <i class='app-menu__icon bx bx-tachometer'></i>
+                    <span class="app-menu__label">Trang chủ</span>
+                </a>
+            </li>*@
             <li>
-                <a class="app-menu__item @ViewBag.home" href="TrangChu"> 
-                    <i class='app-menu__icon bx bx-package'></i> <span class="app-menu__label">Đơn hàng mới</span>
+                <a class="app-menu__item  @ViewBag.gh_donhangmoi" href="~/GiaoHang/DonHangMoi">
+                    <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Đơn hàng mới</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item  @ViewBag.hd" href="DanhSachHD">
-                    <i class='app-menu__icon bx bxs-spreadsheet'></i> <span class="app-menu__label">Danh sách đơn hàng</span>
+                <a class="app-menu__item @ViewBag.gh_dsgh" href="~/GiaoHang/DanhSachGiaoHang">
+                    <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Danh sách giao hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.dh" href="TiepNhanDH">
-                    <i class='app-menu__icon bx bx-undo'></i><span class="app-menu__label">Đơn hàng hoàn</span>
+                <a class="app-menu__item @ViewBag.gh_dsdh" href="~/GiaoHang/DanhSachDonHoan">
+                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Danh sách đơn hoàn</span>
                 </a>
             </li>
+            @*<li>
+                <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
+                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label"></span>
+                </a>
+            </li>*@
             <li>
-                <a class="app-menu__item  @ViewBag.baocao" href="BaoCao">
+                <a class="app-menu__item  @ViewBag.gh_bcldh" href="~/KinhDoanh/BaoCaoPhongGiaoHang">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
+
         </ul>
     </aside>
     <main class="app-content">
@@ -91,19 +108,20 @@
             @RenderBody()
         </div>
     </main>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/popper.min.js"></script>
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/main.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/plugins/pace.min.js"></script>
-    <!--===============================================================================================-->
-    <script type="text/javascript" src="js/plugins/chart.js"></script>
-    <!--===============================================================================================-->
+    <script src="~/Content/js/jquery-3.2.1.min.js"></script>
+    <script src="~/Content/js/popper.min.js"></script>
+    <script src="~/Content/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="src/jquery.table2excel.js"></script>
+    <script src="~/Content/js/main.js"></script>
+    <!-- The javascript plugin to display page loading on top-->
+    <script src="~/Content/js/plugins/pace.min.js"></script>
+    <!-- Page specific javascripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <!-- Data table plugin-->
+    <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
+    <script type="text/javascript">$('#sampleTable').DataTable();</script>
     <script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
@@ -176,6 +194,21 @@
                 return i;
             }
         }
+        //In dữ liệu
+        var myApp = new function () {
+            this.printTable = function () {
+                var tab = document.getElementById('sampleTable');
+                var win = window.open('', '', 'height=700,width=700');
+                win.document.write(tab.outerHTML);
+                win.document.close();
+                win.print();
+            }
+        }
     </script>
+    <script src="~/Content/ckeditor/ckeditor.js"></script>
+
 </body>
 </html>
+
+
+
